# Edge-Native

./: .gitignore  CHARTER.md  CMakeLists.txt  DOCKSIDE-EXAM.md  NEXUS_Phase1_Foundation_Complete_Specs.md  README.md  claude.md  pyproject.toml  roadmap.md  worklog.md
.github/workflows/: esp32-build.yml  esp32-test.yml  jetson-build.yml  jetson-test.yml
NEXUS_Complete_Project_Archive/autopilot_design/: 01_marine_pid_engineering.txt  02_esp32_architecture.txt  04_opensource_analysis.txt  (+3 more)
a2a-native-language/: README.md  agent_communication_and_runtime_model.md  assembly_mapping_and_hardware_bridge.md  cross_domain_a2a_applicability.md  final_synthesis.md  language_design_and_semantics.md  nexus_integration_analysis.md
a2a-native-specs/: README.md  bytecode_vm_a2a_native.md  learning_pipeline_a2a_native.md  marine_reference_a2a_native.md  rosetta_stone.md  safety_system_a2a_native.md  trust_system_a2a_native.md  wire_protocol_a2a_native.md
addenda/: 00_Master_Addendum_Index.md  01_Engineering_Pitfalls_and_Gotchas.md  02_Performance_Budgets_and_Optimization.md  03_Hardware_BringUp_Checklist.md  04_Safety_Validation_Playbook.md  05_Integration_Test_Plan.md  06_Code_Review_Checklist.md
autopilot/: 03_hydraulic_control.txt  07_simulation_results.txt  09_fixes_applied.txt
claude-build/: README.md  build-specification.md
dissertation/: 00_MASTER_INDEX.md
docs/: NEXUS_Master_Build_Prompt_Series.md  NEXUS_Platform_Final_Synthesis.md  NEXUS_Platform_General_Audience.pptx  NEXUS_Platform_Presentation.pptx
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
framework/: 02_nexuslink_protocol.txt  04_bulletproof_coding.txt  05_cross_domain_use_cases.txt
genesis-colony/: 01_GREEK_PHILOSOPHICAL_LENS_ANALYSIS.md  02_CHINESE_PHILOSOPHICAL_LENS_ANALYSIS.md  AFRICAN_COMMUNAL_LENS_ANALYSIS.md  SOVIET_ENGINEERING_LENS_ANALYSIS.md  STRESS_TEST_ANALYSIS.md  THE_COLONY_THESIS.md  indigenous-lens-analysis-phase1.md
human-readable/: README.md  progression-path.md  project-overview.md  simplest-system-tomorrow.md
incubator/: README.md  manifesto.md
jetson/: requirements.txt
knowledge-base/: README.md
onboarding/: README.md
specs/: 00_MASTER_INDEX.md  ARCHITECTURE_DECISION_RECORDS.md  SENIOR_ENGINEER_BUILD_GUIDE.md
tools/: flash.sh  safety_check.py  test_runner.py
v31-docs/: 01_User_Guide_v3.1.md  02_Quick_Start_Guide.md  03_Terms_and_Definitions.md  04_Developer_Guide_v3.1.md  05_Architecture_v3.1.md  06_Modification_Tips_and_Tricks.md  07_Training_Your_Own_Model.md  08_Examples_and_Templates.md  09_Autonomous_Research_Repository.md  10_The_Bootstrapping_Agent.md  11_The_Autonomous_Builder.md  12_Idea_Trees_and_Direction.md  13_Cross_Linguistic_Perspective_Analysis.md
vessel-platform/: 10_esp32_firmware_architecture.txt  11_jetson_cluster_architecture.txt  14_marine_ai_systems.txt  15_redundancy_failover.txt  16_master_consensus_architecture.txt
worksheets-logs/: README.md  iteration-worklog.md
(+193 files in other folders)
