[project]
name = "nexus"
version = "0.1.0"
description = "NEXUS Distributed Intelligence Platform"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["jetson", "shared", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["jetson", "shared"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
